editando estilos em index css

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/font-awesome-4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Animações em JavaScript</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="/font-awesome-4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="index.css">
+        <title>Animações em JavaScript</title>
+    </head>
+    <body>
+        <header>
+            <h1>Olá seja bem vindo!</h1>
+        </header>
+        <div class="container">
+            <div class="estatico">Sou</div>
+            <ul class="dinamico">
+                <li>
+                    <span>Desenvolvedor</span>
+                </li>
+                <li>
+                    <span>Frontend</span>
+                </li>
+                <li>
+                    <span>Desenvolvo projetos em:</span>
+                </li>
+                <li>
+                    <span>HTML5</span>
+                </li>
+                <li>
+                    <span>JavaScript</span>
+                </li>
+                <li>
+                    <span>Angular</span>
+                </li>
+                <li>
+                    <span>Acesse meu github logo abaixo, confira meus projetos</span>
+                </li>
+                <li>
+                    <span>Entre em contato pelo Whatssap</span>
+                </li>
+                <li>
+                    <span>Obrigado pela visita 😁</span>
+                </li>
+            </ul>
+        </div>
+    </body>
 </html>
