--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/font-awesome-4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="index.css">
-        <title>Animações em JavaScript</title>
+        <title>Animações em html e css</title>
     </head>
     <body>
         <header>
@@ -19,27 +19,6 @@
                 </li>
                 <li>
                     <span>Frontend</span>
-                </li>
-                <li>
-                    <span>Desenvolvo projetos em:</span>
-                </li>
-                <li>
-                    <span>HTML5</span>
-                </li>
-                <li>
-                    <span>JavaScript</span>
-                </li>
-                <li>
-                    <span>Angular</span>
-                </li>
-                <li>
-                    <span>Acesse meu github logo abaixo, confira meus projetos</span>
-                </li>
-                <li>
-                    <span>Entre em contato pelo Whatssap</span>
-                </li>
-                <li>
-                    <span>Obrigado pela visita 😁</span>
                 </li>
             </ul>
         </div>
